Shorter previews, better ellipsis, no wrapping. Fixes #12

--- a/src/devtools/panel/style.css
+++ b/src/devtools/panel/style.css
@@ -117,6 +117,9 @@ body {
 
 #nodes .preview {
   flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #nodes .preview.hidden {
